Remove unused revenue snapshot logic; update tests
Clean up unused snapshot generation and churn helper code in RevenueAnalyticsServiceImpl (remove dead methods and simplify churn calculation). Remove an unused PlanRepository field from CustomerServiceImpl. Refresh and refactor unit tests (AdminDashboardServiceImplTest, CustomerBillingServiceImplTest, CustomerServiceImplTest, RevenueAnalyticsServiceImplTest, SubscriptionFlowServiceImplTest, MockPaymentGatewayImplTest) to modernize mocks, assertions and test data (use List.of, reorganize expectations, add/adjust test cases and verifications). Also update sonarqube.txt. These changes remove dead code, simplify logic, and improve test robustness and readability.