@@ -1,14 +1,12 @@
 package com.infy.billing.service;
-
-import static org.mockito.Mockito.*;
 import static org.junit.jupiter.api.Assertions.*;
-
+import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.Mockito.*;
 import java.math.BigDecimal;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
 import java.util.Map;
-
+import java.util.Optional;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -19,19 +17,41 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
-
-import com.infy.billing.dto.admin.*;
-import com.infy.billing.entity.*;
-import com.infy.billing.enums.Status;
-import com.infy.billing.enums.UserRole;
+import com.infy.billing.dto.admin.AddOnResponse;
+import com.infy.billing.dto.admin.CustomerResponse;
+import com.infy.billing.dto.admin.MeteredComponentResponse;
+import com.infy.billing.dto.admin.PlanResponse;
+import com.infy.billing.dto.admin.PriceBookResponse;
+import com.infy.billing.dto.admin.ProductResponse;
+import com.infy.billing.dto.admin.StaffResponse;
+import com.infy.billing.dto.admin.SubscriptionResponse;
+import com.infy.billing.entity.AddOn;
+import com.infy.billing.entity.Coupon;
+import com.infy.billing.entity.Customer;
+import com.infy.billing.entity.MeteredComponent;
+import com.infy.billing.entity.Plan;
+import com.infy.billing.entity.PriceBookEntry;
+import com.infy.billing.entity.Product;
+import com.infy.billing.entity.Subscription;
+import com.infy.billing.entity.TaxRate;
+import com.infy.billing.entity.User;
 import com.infy.billing.enums.BillingPeriod;
-import com.infy.billing.enums.TaxMode;
 import com.infy.billing.enums.CouponType;
-import com.infy.billing.repository.*;
-
+import com.infy.billing.enums.Status;
+import com.infy.billing.enums.TaxMode;
+import com.infy.billing.enums.UserRole;
+import com.infy.billing.repository.AddOnRepository;
+import com.infy.billing.repository.CouponRepository;
+import com.infy.billing.repository.CustomerRepository;
+import com.infy.billing.repository.MeteredComponentRepository;
+import com.infy.billing.repository.PlanRepository;
+import com.infy.billing.repository.PriceBookEntryRepository;
+import com.infy.billing.repository.ProductRepository;
+import com.infy.billing.repository.SubscriptionRepository;
+import com.infy.billing.repository.TaxRateRepository;
+import com.infy.billing.repository.UserRepository;
 @ExtendWith(MockitoExtension.class)
 class AdminDashboardServiceImplTest {
-
     @Mock
     private ProductRepository productRepository;
     @Mock
@@ -56,60 +76,57 @@ class AdminDashboardServiceImplTest {
     private PasswordEncoder passwordEncoder;
     @Mock
     private AuditLoggingService auditLoggingService;
-
     @InjectMocks
     private AdminDashboardServiceImpl adminDashboardService;
-
     private Product product;
     private Plan plan;
     private AddOn addOn;
     private MeteredComponent meteredComponent;
     private TaxRate taxRate;
     private Coupon coupon;
-
     @BeforeEach
     void setUp() {
         product = new Product();
         product.setId(1L);
-        product.setName("Test Product");
+        product.setName("Netflix");
+        product.setDescription("Streaming");
         product.setStatus(Status.ACTIVE);
-
         plan = new Plan();
         plan.setId(1L);
-        plan.setName("Test Plan");
-        plan.setStatus(Status.ACTIVE);
+        plan.setName("Premium");
         plan.setProduct(product);
-
-        addOn = AddOn.builder().id(1L).name("HD Streaming").priceMinor(500L)
-                .currency("INR").billingPeriod(BillingPeriod.MONTHLY)
-                .taxMode(TaxMode.EXCLUSIVE).status(Status.ACTIVE).build();
-
+        plan.setStatus(Status.ACTIVE);
+        addOn = AddOn.builder()
+                .id(1L)
+                .name("4K")
+                .priceMinor(500L)
+                .currency("INR")
+                .billingPeriod(BillingPeriod.MONTHLY)
+                .taxMode(TaxMode.EXCLUSIVE)
+                .status(Status.ACTIVE)
+                .build();
         meteredComponent = new MeteredComponent();
         meteredComponent.setId(1L);
-        meteredComponent.setName("API Calls");
-        meteredComponent.setUnitName("call");
+        meteredComponent.setName("API");
+        meteredComponent.setUnitName("calls");
         meteredComponent.setPricePerUnitMinor(10L);
-        meteredComponent.setPlan(plan);
         meteredComponent.setFreeTierQuantity(100L);
         meteredComponent.setStatus(Status.ACTIVE);
-
+        meteredComponent.setPlan(plan);
         taxRate = new TaxRate();
         taxRate.setId(1L);
         taxRate.setName("GST");
         taxRate.setRegion("IN");
         taxRate.setRatePercent(new BigDecimal("18"));
-        taxRate.setInclusive(false);
-
         coupon = new Coupon();
         coupon.setId(1L);
         coupon.setCode("SAVE20");
-        coupon.setName("Save 20%");
+        coupon.setName("Save");
         coupon.setType(CouponType.PERCENT);
         coupon.setAmount(20L);
         coupon.setStatus(Status.ACTIVE);
     }
-
-    // ==================== DASHBOARD ====================
+    // ================= DASHBOARD =================
     @Test
     void testGetDashboardStats() {
         when(productRepository.count()).thenReturn(5L);
@@ -117,568 +134,603 @@ class AdminDashboardServiceImplTest {
         when(couponRepository.countByStatus(Status.ACTIVE)).thenReturn(3L);
         when(addOnRepository.count()).thenReturn(4L);
         when(taxRateRepository.countActiveTaxRates()).thenReturn(2L);
-        when(priceBookEntryRepository.count()).thenReturn(6L);
-        when(customerRepository.count()).thenReturn(8L);
-        User staffUser = User.builder().id(1L).role(UserRole.ADMIN).build();
-        when(userRepository.findAll()).thenReturn(Arrays.asList(staffUser));
-
-        Map<String, Object> stats = adminDashboardService.getDashboardStats();
-
+        when(priceBookEntryRepository.count()).thenReturn(8L);
+        when(customerRepository.count()).thenReturn(6L);
+        User admin = User.builder()
+                .id(1L)
+                .role(UserRole.ADMIN)
+                .build();
+        when(userRepository.findAll()).thenReturn(List.of(admin));
+        Map<String, Object> stats =
+                adminDashboardService.getDashboardStats();
         assertEquals(5L, stats.get("totalProducts"));
         assertEquals(10L, stats.get("totalPlans"));
         assertEquals(3L, stats.get("activeCoupons"));
         assertEquals(4L, stats.get("totalAddOns"));
         assertEquals(2L, stats.get("activeTaxRates"));
-        assertEquals(6L, stats.get("totalPriceBooks"));
-        assertEquals(8L, stats.get("totalCustomers"));
+        assertEquals(8L, stats.get("totalPriceBooks"));
+        assertEquals(6L, stats.get("totalCustomers"));
         assertEquals(1L, stats.get("totalStaff"));
     }
-
-    // ==================== PRODUCT ====================
+    // ================= PRODUCT =================
     @Test
     void testGetAllProducts() {
-        when(productRepository.findAll()).thenReturn(Arrays.asList(product));
+        when(productRepository.findAll()).thenReturn(List.of(product));
         when(planRepository.countByProductId(1L)).thenReturn(2L);
-        List<ProductResponse> result = adminDashboardService.getAllProducts();
+        List<ProductResponse> result =
+                adminDashboardService.getAllProducts();
         assertEquals(1, result.size());
-        assertEquals("Test Product", result.get(0).getName());
     }
-
     @Test
     void testGetProductById() {
-        when(productRepository.findById(1L)).thenReturn(Optional.of(product));
-        when(planRepository.countByProductId(1L)).thenReturn(2L);
-        ProductResponse result = adminDashboardService.getProductById(1L);
+        when(productRepository.findById(1L))
+                .thenReturn(Optional.of(product));
+        when(planRepository.countByProductId(1L))
+                .thenReturn(2L);
+        ProductResponse result =
+                adminDashboardService.getProductById(1L);
         assertNotNull(result);
-        assertEquals("Test Product", result.getName());
     }
-
     @Test
     void testGetProductById_NotFound() {
-        when(productRepository.findById(1L)).thenReturn(Optional.empty());
-        assertThrows(RuntimeException.class, () -> adminDashboardService.getProductById(1L));
+        when(productRepository.findById(1L))
+                .thenReturn(Optional.empty());
+        assertThrows(RuntimeException.class,
+                () -> adminDashboardService.getProductById(1L));
     }
-
     @Test
     void testCreateProduct() {
-        when(productRepository.save(any(Product.class))).thenReturn(product);
-        ProductResponse result = adminDashboardService.createProduct(product);
+        when(productRepository.save(any(Product.class)))
+                .thenReturn(product);
+        ProductResponse result =
+                adminDashboardService.createProduct(product);
         assertNotNull(result);
-        assertEquals("Test Product", result.getName());
+        verify(auditLoggingService)
+                .logAction(anyString(), anyString(),
+                        anyLong(), any(), any());
     }
-
     @Test
-    void testUpdateProduct_Success() {
+    void testUpdateProduct() {
         Product updated = new Product();
-        updated.setName("Updated Product");
-        when(productRepository.findById(1L)).thenReturn(Optional.of(product));
-        when(productRepository.save(any(Product.class))).thenReturn(updated);
-        ProductResponse result = adminDashboardService.updateProduct(1L, updated);
+        updated.setName("Updated");
+        when(productRepository.findById(1L))
+                .thenReturn(Optional.of(product));
+        when(productRepository.save(any(Product.class)))
+                .thenReturn(product);
+        ProductResponse result =
+                adminDashboardService.updateProduct(1L, updated);
         assertNotNull(result);
     }
-
     @Test
-    void testUpdateProduct_NotFound() {
-        when(productRepository.findById(1L)).thenReturn(Optional.empty());
-        Product emptyProduct = new Product();
-        assertThrows(RuntimeException.class, () -> adminDashboardService.updateProduct(1L, emptyProduct));
-    }
-
-    @Test
-    void testToggleProductStatus_ActiveToInactive() {
-        product.setStatus(Status.ACTIVE);
-        when(productRepository.findById(1L)).thenReturn(Optional.of(product));
+    void testToggleProductStatus() {
+        when(productRepository.findById(1L))
+                .thenReturn(Optional.of(product));
         adminDashboardService.toggleProductStatus(1L);
         assertEquals(Status.INACTIVE, product.getStatus());
         verify(productRepository).save(product);
     }
-
-    @Test
-    void testToggleProductStatus_InactiveToActive() {
-        product.setStatus(Status.INACTIVE);
-        when(productRepository.findById(1L)).thenReturn(Optional.of(product));
-        adminDashboardService.toggleProductStatus(1L);
-        assertEquals(Status.ACTIVE, product.getStatus());
-        verify(productRepository).save(product);
-    }
-
-    @Test
-    void testToggleProductStatus_NotFound() {
-        when(productRepository.findById(1L)).thenReturn(Optional.empty());
-        assertThrows(RuntimeException.class, () -> adminDashboardService.toggleProductStatus(1L));
-    }
-
-    // ==================== PLAN ====================
+    // ================= PLAN =================
     @Test
     void testGetAllPlans() {
-        when(planRepository.findAll()).thenReturn(Arrays.asList(plan));
-        List<PlanResponse> result = adminDashboardService.getAllPlans();
+        when(planRepository.findAll()).thenReturn(List.of(plan));
+        List<PlanResponse> result =
+                adminDashboardService.getAllPlans();
         assertEquals(1, result.size());
-        assertEquals("Test Plan", result.get(0).getName());
     }
-
     @Test
     void testCreatePlan() {
-        when(planRepository.save(any(Plan.class))).thenReturn(plan);
-        PlanResponse result = adminDashboardService.createPlan(plan);
+        when(planRepository.save(any(Plan.class)))
+                .thenReturn(plan);
+        PlanResponse result =
+                adminDashboardService.createPlan(plan);
         assertNotNull(result);
-        assertEquals("Test Plan", result.getName());
     }
-
     @Test
-    void testUpdatePlan_Success() {
+    void testUpdatePlan() {
         Plan updated = new Plan();
-        updated.setName("Updated Plan");
-        updated.setProduct(product);
-        when(planRepository.findById(1L)).thenReturn(Optional.of(plan));
-        when(planRepository.save(any(Plan.class))).thenReturn(updated);
-        PlanResponse result = adminDashboardService.updatePlan(1L, updated);
+        updated.setName("Updated");
+        when(planRepository.findById(1L))
+                .thenReturn(Optional.of(plan));
+        when(planRepository.save(any(Plan.class)))
+                .thenReturn(plan);
+        PlanResponse result =
+                adminDashboardService.updatePlan(1L, updated);
         assertNotNull(result);
     }
-
     @Test
-    void testUpdatePlan_NotFound() {
-        when(planRepository.findById(1L)).thenReturn(Optional.empty());
-        Plan emptyPlan = new Plan();
-        assertThrows(RuntimeException.class, () -> adminDashboardService.updatePlan(1L, emptyPlan));
+    void testDeletePlan_Success() {
+        when(planRepository.findById(1L))
+                .thenReturn(Optional.of(plan));
+        when(subscriptionRepository.countByPlan_IdAndStatusIn(
+                anyLong(), any()))
+                .thenReturn(0L);
+        when(priceBookEntryRepository.findByPlan_Id(1L))
+                .thenReturn(List.of(new PriceBookEntry()));
+        adminDashboardService.deletePlan(1L);
+        verify(planRepository).deleteById(1L);
     }
-
-    // @Test
-    // void testTogglePlanStatus_ActiveToInactive() {
-    //     plan.setStatus(Status.ACTIVE);
-    //     when(planRepository.findById(1L)).thenReturn(Optional.of(plan));
-    //     adminDashboardService.togglePlanStatus(1L);
-    //     assertEquals(Status.INACTIVE, plan.getStatus());
-    //     verify(planRepository).save(plan);
-    // }
-
-    // @Test
-    // void testTogglePlanStatus_InactiveToActive() {
-    //     plan.setStatus(Status.INACTIVE);
-    //     when(planRepository.findById(1L)).thenReturn(Optional.of(plan));
-    //     adminDashboardService.togglePlanStatus(1L);
-    //     assertEquals(Status.ACTIVE, plan.getStatus());
-    //     verify(planRepository).save(plan);
-    // }
-
-    // @Test
-    // void testTogglePlanStatus_NotFound() {
-    //     when(planRepository.findById(1L)).thenReturn(Optional.empty());
-    //     assertThrows(RuntimeException.class, () -> adminDashboardService.togglePlanStatus(1L));
-    // }
-
-    // ==================== PRICE BOOK ====================
+    @Test
+    void testDeletePlan_Conflict() {
+        when(planRepository.findById(1L))
+                .thenReturn(Optional.of(plan));
+        when(subscriptionRepository.countByPlan_IdAndStatusIn(
+                anyLong(), any()))
+                .thenReturn(5L);
+        assertThrows(RuntimeException.class,
+                () -> adminDashboardService.deletePlan(1L));
+    }
+    // ================= PRICE BOOK =================
     @Test
     void testGetAllPriceBookEntries() {
         PriceBookEntry entry = new PriceBookEntry();
         entry.setId(1L);
-        entry.setRegion("US");
         entry.setPlan(plan);
-        when(priceBookEntryRepository.findAll()).thenReturn(Arrays.asList(entry));
-        List<PriceBookResponse> result = adminDashboardService.getAllPriceBookEntries();
+        when(priceBookEntryRepository.findAll())
+                .thenReturn(List.of(entry));
+        List<PriceBookResponse> result =
+                adminDashboardService.getAllPriceBookEntries();
         assertEquals(1, result.size());
-        assertEquals("US", result.get(0).getRegion());
     }
-
     @Test
     void testCreatePriceBookEntry() {
         PriceBookEntry entry = new PriceBookEntry();
         entry.setId(1L);
         entry.setPlan(plan);
-        when(priceBookEntryRepository.save(any(PriceBookEntry.class))).thenReturn(entry);
-        PriceBookResponse result = adminDashboardService.createPriceBookEntry(entry);
+        when(priceBookEntryRepository.save(any()))
+                .thenReturn(entry);
+        PriceBookResponse result =
+                adminDashboardService.createPriceBookEntry(entry);
         assertNotNull(result);
     }
-
     @Test
-    void testUpdatePriceBookEntry_Success() {
+    void testArchivePriceBookEntry() {
         PriceBookEntry entry = new PriceBookEntry();
-        entry.setId(1L);
-        entry.setRegion("US");
         entry.setPlan(plan);
-        PriceBookEntry updated = new PriceBookEntry();
-        updated.setRegion("EU");
-        when(priceBookEntryRepository.findById(1L)).thenReturn(Optional.of(entry));
-        when(priceBookEntryRepository.save(any(PriceBookEntry.class))).thenReturn(entry);
-        PriceBookResponse result = adminDashboardService.updatePriceBookEntry(1L, updated);
-        assertNotNull(result);
-        assertEquals("EU", entry.getRegion());
-    }
-
-    @Test
-    void testUpdatePriceBookEntry_NotFound() {
-        when(priceBookEntryRepository.findById(1L)).thenReturn(Optional.empty());
-        PriceBookEntry emptyEntry = new PriceBookEntry();
-        assertThrows(RuntimeException.class,
-                () -> adminDashboardService.updatePriceBookEntry(1L, emptyEntry));
-    }
-
-    @Test
-    void testArchivePriceBookEntry_Success() {
-        PriceBookEntry entry = new PriceBookEntry();
-        entry.setId(1L);
-        entry.setPlan(plan);
-        when(priceBookEntryRepository.findById(1L)).thenReturn(Optional.of(entry));
-        when(subscriptionRepository.countByPlan_IdAndStatusIn(anyLong(), any())).thenReturn(0L);
+        when(priceBookEntryRepository.findById(1L))
+                .thenReturn(Optional.of(entry));
+        when(subscriptionRepository.countByPlan_IdAndStatusIn(
+                anyLong(), any()))
+                .thenReturn(0L);
         adminDashboardService.archivePriceBookEntry(1L);
         verify(priceBookEntryRepository).deleteById(1L);
     }
-
-    @Test
-    void testArchivePriceBookEntry_Conflict() {
-        PriceBookEntry entry = new PriceBookEntry();
-        entry.setId(1L);
-        entry.setPlan(plan);
-        when(priceBookEntryRepository.findById(1L)).thenReturn(Optional.of(entry));
-        when(subscriptionRepository.countByPlan_IdAndStatusIn(anyLong(), any())).thenReturn(5L);
-        assertThrows(RuntimeException.class, () -> adminDashboardService.archivePriceBookEntry(1L));
-    }
-
-    @Test
-    void testArchivePriceBookEntry_NotFound() {
-        when(priceBookEntryRepository.findById(1L)).thenReturn(Optional.empty());
-        assertThrows(RuntimeException.class, () -> adminDashboardService.archivePriceBookEntry(1L));
-    }
-
-    // ==================== ADD-ON ====================
+    // ================= ADDON =================
     @Test
     void testGetAllAddOns() {
-        when(addOnRepository.findAll()).thenReturn(Arrays.asList(addOn));
-        List<AddOnResponse> result = adminDashboardService.getAllAddOns();
+        when(addOnRepository.findAll())
+                .thenReturn(List.of(addOn));
+        List<AddOnResponse> result =
+                adminDashboardService.getAllAddOns();
         assertEquals(1, result.size());
-        assertEquals("HD Streaming", result.get(0).getName());
     }
-
     @Test
     void testCreateAddOn() {
-        when(addOnRepository.save(any(AddOn.class))).thenReturn(addOn);
-        AddOnResponse result = adminDashboardService.createAddOn(addOn);
+        when(addOnRepository.save(any(AddOn.class)))
+                .thenReturn(addOn);
+        AddOnResponse result =
+                adminDashboardService.createAddOn(addOn);
         assertNotNull(result);
-        assertEquals("HD Streaming", result.getName());
     }
-
     @Test
-    void testUpdateAddOn_Success() {
-        AddOn updated = AddOn.builder().name("4K Streaming").priceMinor(800L)
-                .currency("INR").billingPeriod(BillingPeriod.MONTHLY).taxMode(TaxMode.EXCLUSIVE).build();
-        when(addOnRepository.findById(1L)).thenReturn(Optional.of(addOn));
-        when(addOnRepository.save(any(AddOn.class))).thenReturn(addOn);
-        AddOnResponse result = adminDashboardService.updateAddOn(1L, updated);
-        assertNotNull(result);
-        assertEquals("4K Streaming", addOn.getName());
-    }
-
-    @Test
-    void testUpdateAddOn_NotFound() {
-        when(addOnRepository.findById(1L)).thenReturn(Optional.empty());
-        AddOn emptyAddOn = new AddOn();
-        assertThrows(RuntimeException.class, () -> adminDashboardService.updateAddOn(1L, emptyAddOn));
-    }
-
-    @Test
-    void testToggleAddOnStatus_ActiveToInactive() {
-        addOn.setStatus(Status.ACTIVE);
-        when(addOnRepository.findById(1L)).thenReturn(Optional.of(addOn));
+    void testToggleAddOnStatus() {
+        when(addOnRepository.findById(1L))
+                .thenReturn(Optional.of(addOn));
         adminDashboardService.toggleAddOnStatus(1L);
         assertEquals(Status.INACTIVE, addOn.getStatus());
-        verify(addOnRepository).save(addOn);
     }
-
-    @Test
-    void testToggleAddOnStatus_InactiveToActive() {
-        addOn.setStatus(Status.INACTIVE);
-        when(addOnRepository.findById(1L)).thenReturn(Optional.of(addOn));
-        adminDashboardService.toggleAddOnStatus(1L);
-        assertEquals(Status.ACTIVE, addOn.getStatus());
-        verify(addOnRepository).save(addOn);
-    }
-
-    @Test
-    void testToggleAddOnStatus_NotFound() {
-        when(addOnRepository.findById(1L)).thenReturn(Optional.empty());
-        assertThrows(RuntimeException.class, () -> adminDashboardService.toggleAddOnStatus(1L));
-    }
-
-    // ==================== METERED COMPONENT ====================
+    // ================= METERED =================
     @Test
     void testGetAllMeteredComponents() {
-        when(meteredComponentRepository.findAll()).thenReturn(Arrays.asList(meteredComponent));
-        List<MeteredComponentResponse> result = adminDashboardService.getAllMeteredComponents();
+        when(meteredComponentRepository.findAll())
+                .thenReturn(List.of(meteredComponent));
+        List<MeteredComponentResponse> result =
+                adminDashboardService.getAllMeteredComponents();
         assertEquals(1, result.size());
-        assertEquals("API Calls", result.get(0).getName());
     }
-
     @Test
     void testCreateMeteredComponent() {
-        when(meteredComponentRepository.save(any(MeteredComponent.class))).thenReturn(meteredComponent);
-        MeteredComponentResponse result = adminDashboardService.createMeteredComponent(meteredComponent);
+        when(meteredComponentRepository.save(any()))
+                .thenReturn(meteredComponent);
+        MeteredComponentResponse result =
+                adminDashboardService.createMeteredComponent(
+                        meteredComponent);
         assertNotNull(result);
-        assertEquals("API Calls", result.getName());
     }
-
     @Test
-    void testUpdateMeteredComponent_Success() {
-        MeteredComponent updated = new MeteredComponent();
-        updated.setName("Bandwidth");
-        updated.setUnitName("GB");
-        updated.setPricePerUnitMinor(50L);
-        updated.setFreeTierQuantity(5L);
-        when(meteredComponentRepository.findById(1L)).thenReturn(Optional.of(meteredComponent));
-        when(meteredComponentRepository.save(any(MeteredComponent.class))).thenReturn(meteredComponent);
-        MeteredComponentResponse result = adminDashboardService.updateMeteredComponent(1L, updated);
-        assertNotNull(result);
-        assertEquals("Bandwidth", meteredComponent.getName());
-    }
-
-    @Test
-    void testUpdateMeteredComponent_NotFound() {
-        when(meteredComponentRepository.findById(1L)).thenReturn(Optional.empty());
-        MeteredComponent emptyComp = new MeteredComponent();
-        assertThrows(RuntimeException.class,
-                () -> adminDashboardService.updateMeteredComponent(1L, emptyComp));
-    }
-
-    @Test
-    void testToggleMeteredComponentStatus_ActiveToInactive() {
-        meteredComponent.setStatus(Status.ACTIVE);
-        when(meteredComponentRepository.findById(1L)).thenReturn(Optional.of(meteredComponent));
+    void testToggleMeteredComponentStatus() {
+        when(meteredComponentRepository.findById(1L))
+                .thenReturn(Optional.of(meteredComponent));
         adminDashboardService.toggleMeteredComponentStatus(1L);
-        assertEquals(Status.INACTIVE, meteredComponent.getStatus());
-        verify(meteredComponentRepository).save(meteredComponent);
+        assertEquals(Status.INACTIVE,
+                meteredComponent.getStatus());
     }
-
-    @Test
-    void testToggleMeteredComponentStatus_NotFound() {
-        when(meteredComponentRepository.findById(1L)).thenReturn(Optional.empty());
-        assertThrows(RuntimeException.class, () -> adminDashboardService.toggleMeteredComponentStatus(1L));
-    }
-
-    // ==================== TAX RATE ====================
+    // ================= TAX =================
     @Test
     void testGetAllTaxRates() {
-        when(taxRateRepository.findAll()).thenReturn(Arrays.asList(taxRate));
-        List<TaxRate> result = adminDashboardService.getAllTaxRates();
+        when(taxRateRepository.findAll())
+                .thenReturn(List.of(taxRate));
+        List<TaxRate> result =
+                adminDashboardService.getAllTaxRates();
         assertEquals(1, result.size());
-        assertEquals("GST", result.get(0).getName());
     }
-
     @Test
     void testCreateTaxRate() {
-        when(taxRateRepository.save(any(TaxRate.class))).thenReturn(taxRate);
-        TaxRate result = adminDashboardService.createTaxRate(taxRate);
+        when(taxRateRepository.save(any()))
+                .thenReturn(taxRate);
+        TaxRate result =
+                adminDashboardService.createTaxRate(taxRate);
         assertNotNull(result);
-        assertEquals("GST", result.getName());
     }
-
-    @Test
-    void testUpdateTaxRate_Success() {
-        TaxRate updated = new TaxRate();
-        updated.setName("VAT");
-        updated.setRegion("US");
-        updated.setRatePercent(new BigDecimal("10"));
-        updated.setInclusive(true);
-        when(taxRateRepository.findById(1L)).thenReturn(Optional.of(taxRate));
-        when(taxRateRepository.save(any(TaxRate.class))).thenReturn(taxRate);
-        TaxRate result = adminDashboardService.updateTaxRate(1L, updated);
-        assertNotNull(result);
-        assertEquals("VAT", taxRate.getName());
-    }
-
-    @Test
-    void testUpdateTaxRate_NotFound() {
-        when(taxRateRepository.findById(1L)).thenReturn(Optional.empty());
-        TaxRate emptyTax = new TaxRate();
-        assertThrows(RuntimeException.class, () -> adminDashboardService.updateTaxRate(1L, emptyTax));
-    }
-
     @Test
     void testDeleteTaxRate() {
         adminDashboardService.deleteTaxRate(1L);
         verify(taxRateRepository).deleteById(1L);
     }
-
-    // ==================== COUPON ====================
+    // ================= COUPON =================
     @Test
     void testGetAllCoupons() {
-        when(couponRepository.findAll()).thenReturn(Arrays.asList(coupon));
-        List<Coupon> result = adminDashboardService.getAllCoupons();
+        when(couponRepository.findAll())
+                .thenReturn(List.of(coupon));
+        List<Coupon> result =
+                adminDashboardService.getAllCoupons();
         assertEquals(1, result.size());
-        assertEquals("SAVE20", result.get(0).getCode());
     }
-
     @Test
-    void testCreateCoupon_Success() {
-        when(couponRepository.existsByCode("SAVE20")).thenReturn(false);
-        when(couponRepository.save(any(Coupon.class))).thenReturn(coupon);
-        Coupon result = adminDashboardService.createCoupon(coupon);
+    void testCreateCoupon() {
+        when(couponRepository.existsByCode("SAVE20"))
+                .thenReturn(false);
+        when(couponRepository.save(any()))
+                .thenReturn(coupon);
+        Coupon result =
+                adminDashboardService.createCoupon(coupon);
         assertNotNull(result);
-        assertEquals("SAVE20", result.getCode());
     }
-
     @Test
-    void testCreateCoupon_DuplicateCode() {
-        when(couponRepository.existsByCode("SAVE20")).thenReturn(true);
-        assertThrows(RuntimeException.class, () -> adminDashboardService.createCoupon(coupon));
+    void testCreateCoupon_Conflict() {
+        when(couponRepository.existsByCode("SAVE20"))
+                .thenReturn(true);
+        assertThrows(RuntimeException.class,
+                () -> adminDashboardService.createCoupon(coupon));
     }
-
     @Test
-    void testUpdateCoupon_Success() {
-        Coupon updated = new Coupon();
-        updated.setName("Save 30%");
-        updated.setType(CouponType.PERCENT);
-        updated.setAmount(30L);
-        when(couponRepository.findById(1L)).thenReturn(Optional.of(coupon));
-        when(couponRepository.save(any(Coupon.class))).thenReturn(coupon);
-        Coupon result = adminDashboardService.updateCoupon(1L, updated);
-        assertNotNull(result);
-        assertEquals("Save 30%", coupon.getName());
-    }
-
-    @Test
-    void testUpdateCoupon_NotFound() {
-        when(couponRepository.findById(1L)).thenReturn(Optional.empty());
-        Coupon emptyCoupon = new Coupon();
-        assertThrows(RuntimeException.class, () -> adminDashboardService.updateCoupon(1L, emptyCoupon));
-    }
-
-    @Test
-    void testToggleCouponStatus_ActiveToDisabled() {
-        coupon.setStatus(Status.ACTIVE);
-        when(couponRepository.findById(1L)).thenReturn(Optional.of(coupon));
+    void testToggleCouponStatus() {
+        when(couponRepository.findById(1L))
+                .thenReturn(Optional.of(coupon));
         adminDashboardService.toggleCouponStatus(1L);
-        assertEquals(Status.DISABLED, coupon.getStatus());
-        verify(couponRepository).save(coupon);
+        assertEquals(Status.DISABLED,
+                coupon.getStatus());
     }
-
-    @Test
-    void testToggleCouponStatus_DisabledToActive() {
-        coupon.setStatus(Status.DISABLED);
-        when(couponRepository.findById(1L)).thenReturn(Optional.of(coupon));
-        adminDashboardService.toggleCouponStatus(1L);
-        assertEquals(Status.ACTIVE, coupon.getStatus());
-        verify(couponRepository).save(coupon);
-    }
-
-    @Test
-    void testToggleCouponStatus_NotFound() {
-        when(couponRepository.findById(1L)).thenReturn(Optional.empty());
-        assertThrows(RuntimeException.class, () -> adminDashboardService.toggleCouponStatus(1L));
-    }
-
-    // ==================== CUSTOMERS ====================
+    // ================= CUSTOMER =================
     @Test
     void testGetAllCustomers() {
-        User custUser = User.builder().id(10L).email("cust@test.com").fullName("Cust").build();
-        Customer customer = Customer.builder().id(1L).user(custUser).build();
-        when(customerRepository.findAll()).thenReturn(Arrays.asList(customer));
-        List<CustomerResponse> result = adminDashboardService.getAllCustomers();
+        Customer customer = new Customer();
+       User user=new User();
+       user.setId(1L);
+       user.setFullName("Test User");
+       customer.setUser(user);
+        when(customerRepository.findAll())
+                .thenReturn(List.of(customer));
+        List<CustomerResponse> result =
+                adminDashboardService.getAllCustomers();
         assertEquals(1, result.size());
     }
-
-    // ==================== STAFF ====================
+    // ================= STAFF =================
     @Test
     void testGetAllStaff() {
-        User admin = User.builder().id(1L).role(UserRole.ADMIN).build();
-        User customer = User.builder().id(2L).role(UserRole.CUSTOMER).build();
-        when(userRepository.findAll()).thenReturn(Arrays.asList(admin, customer));
-        List<StaffResponse> result = adminDashboardService.getAllStaff();
-        assertEquals(1, result.size()); // Only ADMIN, not CUSTOMER
-    }
-
-    @Test
-    void testCreateStaff_Success() {
-        User newStaff = User.builder().email("staff@test.com").passwordHash("plain123").role(UserRole.SUPPORT).build();
-        when(userRepository.existsByEmail("staff@test.com")).thenReturn(false);
-        when(passwordEncoder.encode("plain123")).thenReturn("encoded123");
-        when(userRepository.save(any(User.class))).thenReturn(newStaff);
-        StaffResponse result = adminDashboardService.createStaff(newStaff);
-        assertNotNull(result);
-        verify(passwordEncoder).encode("plain123");
-    }
-
-    @Test
-    void testCreateStaff_DuplicateEmail() {
-        User newStaff = User.builder().email("staff@test.com").build();
-        when(userRepository.existsByEmail("staff@test.com")).thenReturn(true);
-        assertThrows(RuntimeException.class, () -> adminDashboardService.createStaff(newStaff));
-    }
-
-    @Test
-    void testDeleteStaff_Success() {
-        User staffUser = User.builder().id(2L).email("other@test.com").role(UserRole.SUPPORT).build();
-        when(userRepository.findById(2L)).thenReturn(Optional.of(staffUser));
-
-        // Mock SecurityContext
-        Authentication auth = mock(Authentication.class);
-        when(auth.getName()).thenReturn("admin@test.com");
-        SecurityContext securityContext = mock(SecurityContext.class);
-        when(securityContext.getAuthentication()).thenReturn(auth);
-        SecurityContextHolder.setContext(securityContext);
-
-        adminDashboardService.deleteStaff(2L);
-        verify(userRepository).deleteById(2L);
-    }
-
-    @Test
-    void testDeleteStaff_NotFound() {
-        when(userRepository.findById(1L)).thenReturn(Optional.empty());
-        assertThrows(RuntimeException.class, () -> adminDashboardService.deleteStaff(1L));
-    }
-
-    @Test
-    void testDeleteStaff_SelfDeletion() {
-        User staffUser = User.builder().id(1L).email("admin@test.com").role(UserRole.ADMIN).build();
-        when(userRepository.findById(1L)).thenReturn(Optional.of(staffUser));
-
-        Authentication auth = mock(Authentication.class);
-        when(auth.getName()).thenReturn("admin@test.com");
-        SecurityContext securityContext = mock(SecurityContext.class);
-        when(securityContext.getAuthentication()).thenReturn(auth);
-        SecurityContextHolder.setContext(securityContext);
-
-        assertThrows(RuntimeException.class, () -> adminDashboardService.deleteStaff(1L));
-    }
-
-    @Test
-    void testDeleteStaff_CustomerRole() {
-        User customerUser = User.builder().id(3L).email("cust@test.com").role(UserRole.CUSTOMER).build();
-        when(userRepository.findById(3L)).thenReturn(Optional.of(customerUser));
-
-        Authentication auth = mock(Authentication.class);
-        when(auth.getName()).thenReturn("admin@test.com");
-        SecurityContext securityContext = mock(SecurityContext.class);
-        when(securityContext.getAuthentication()).thenReturn(auth);
-        SecurityContextHolder.setContext(securityContext);
-
-        assertThrows(RuntimeException.class, () -> adminDashboardService.deleteStaff(3L));
-    }
-
-    // ==================== SUBSCRIPTIONS ====================
-    @Test
-    void testGetAllSubscriptions() {
-        User subUser = User.builder().id(10L).fullName("Sub User").build();
-        Customer subCustomer = Customer.builder().id(1L).user(subUser).build();
-        Subscription sub = Subscription.builder().id(1L).customer(subCustomer)
-                .plan(plan).status(Status.ACTIVE).build();
-        when(subscriptionRepository.findAll()).thenReturn(Arrays.asList(sub));
-        List<SubscriptionResponse> result = adminDashboardService.getAllSubscriptions();
+        User admin = User.builder()
+                .id(1L)
+                .email("admin@test.com")
+                .role(UserRole.ADMIN)
+                .build();
+        User customer = User.builder()
+                .id(2L)
+                .email("customer@test.com")
+                .role(UserRole.CUSTOMER)
+                .build();
+        when(userRepository.findAll())
+                .thenReturn(Arrays.asList(admin, customer));
+        List<StaffResponse> result =
+                adminDashboardService.getAllStaff();
         assertEquals(1, result.size());
     }
-
     @Test
-    void testGetSubscriptionById_Success() {
-        User subUser = User.builder().id(10L).fullName("Sub User").build();
-        Customer subCustomer = Customer.builder().id(1L).user(subUser).build();
-        Subscription sub = Subscription.builder().id(1L).customer(subCustomer)
-                .plan(plan).status(Status.ACTIVE).build();
-        when(subscriptionRepository.findById(1L)).thenReturn(Optional.of(sub));
-        SubscriptionResponse result = adminDashboardService.getSubscriptionById(1L);
+    void testCreateStaff() {
+        User user = User.builder()
+                .email("admin@test.com")
+                .passwordHash("raw")
+                .role(UserRole.ADMIN)
+                .build();
+        when(userRepository.existsByEmail("admin@test.com"))
+                .thenReturn(false);
+        when(passwordEncoder.encode("raw"))
+                .thenReturn("encoded");
+        when(userRepository.save(any(User.class)))
+                .thenReturn(user);
+        StaffResponse result =
+                adminDashboardService.createStaff(user);
+        assertNotNull(result);
+        verify(passwordEncoder).encode("raw");
+    }
+    @Test
+    void testDeleteStaff_Success() {
+        User user = User.builder()
+                .id(1L)
+                .email("staff@test.com")
+                .role(UserRole.ADMIN)
+                .build();
+        when(userRepository.findById(1L))
+                .thenReturn(Optional.of(user));
+        Authentication authentication =
+                mock(Authentication.class);
+        SecurityContext securityContext =
+                mock(SecurityContext.class);
+        when(authentication.getName())
+                .thenReturn("other@test.com");
+        when(securityContext.getAuthentication())
+                .thenReturn(authentication);
+        SecurityContextHolder.setContext(securityContext);
+        adminDashboardService.deleteStaff(1L);
+        verify(userRepository).deleteById(1L);
+    }
+    @Test
+    void testDeleteStaff_SelfDeleteForbidden() {
+        User user = User.builder()
+                .id(1L)
+                .email("admin@test.com")
+                .role(UserRole.ADMIN)
+                .build();
+        when(userRepository.findById(1L))
+                .thenReturn(Optional.of(user));
+        Authentication authentication =
+                mock(Authentication.class);
+        SecurityContext securityContext =
+                mock(SecurityContext.class);
+        when(authentication.getName())
+                .thenReturn("admin@test.com");
+        when(securityContext.getAuthentication())
+                .thenReturn(authentication);
+        SecurityContextHolder.setContext(securityContext);
+        assertThrows(RuntimeException.class,
+                () -> adminDashboardService.deleteStaff(1L));
+    }
+    // ================= SUBSCRIPTION =================
+    @Test
+    void testGetAllSubscriptions() {
+    	User user=new User();
+    	user.setId(1L);
+    	user.setFullName("Test User");
+    	Customer customer=new Customer();
+    	customer.setId(1L);
+    	customer.setUser(user);
+        Subscription subscription = new Subscription();
+        subscription.setId(1L);
+        subscription.setCustomer(customer);
+        subscription.setPlan(plan);
+        when(subscriptionRepository.findAll())
+                .thenReturn(List.of(subscription));
+        List<SubscriptionResponse> result =
+                adminDashboardService.getAllSubscriptions();
+        assertEquals(1, result.size());
+    }
+    @Test
+    void testGetSubscriptionById() {
+    	User user=new User();
+    	user.setId(1L);
+    	user.setFullName("Test User");
+    	Customer customer=new Customer();
+    	customer.setId(1L);
+    	customer.setUser(user);
+    	
+        Subscription subscription = new Subscription();
+        subscription.setId(1L);
+        subscription.setCustomer(customer);
+        subscription.setPlan(plan);
+
+        when(subscriptionRepository.findById(1L))
+                .thenReturn(Optional.of(subscription));
+        SubscriptionResponse result =
+                adminDashboardService.getSubscriptionById(1L);
         assertNotNull(result);
     }
-
     @Test
     void testGetSubscriptionById_NotFound() {
-        when(subscriptionRepository.findById(1L)).thenReturn(Optional.empty());
-        assertThrows(RuntimeException.class, () -> adminDashboardService.getSubscriptionById(1L));
+        when(subscriptionRepository.findById(1L))
+                .thenReturn(Optional.empty());
+        assertThrows(RuntimeException.class,
+                () -> adminDashboardService.getSubscriptionById(1L));
+    }
+    @Test
+    void testUpdateAddOn() {
+        AddOn updated = AddOn.builder()
+                .name("Updated")
+                .priceMinor(1000L)
+                .currency("INR")
+                .billingPeriod(BillingPeriod.YEARLY)
+                .taxMode(TaxMode.EXCLUSIVE)
+                .build();
+        when(addOnRepository.findById(1L))
+                .thenReturn(Optional.of(addOn));
+        when(addOnRepository.save(any()))
+                .thenReturn(addOn);
+        AddOnResponse result =
+                adminDashboardService.updateAddOn(1L, updated);
+        assertNotNull(result);
+    }
+    @Test
+    void testToggleAddOnStatus_NotFound() {
+        when(addOnRepository.findById(1L))
+                .thenReturn(Optional.empty());
+        assertThrows(RuntimeException.class,
+                () -> adminDashboardService.toggleAddOnStatus(1L));
+    }
+    @Test
+    void testUpdateMeteredComponent() {
+        MeteredComponent updated = new MeteredComponent();
+        updated.setName("Bandwidth");
+        updated.setUnitName("GB");
+        updated.setPricePerUnitMinor(50L);
+        updated.setFreeTierQuantity(10L);
+        when(meteredComponentRepository.findById(1L))
+                .thenReturn(Optional.of(meteredComponent));
+        when(meteredComponentRepository.save(any()))
+                .thenReturn(meteredComponent);
+        MeteredComponentResponse result =
+                adminDashboardService.updateMeteredComponent(1L, updated);
+        assertNotNull(result);
+    }
+    @Test
+    void testToggleMeteredComponentStatus_NotFound() {
+        when(meteredComponentRepository.findById(1L))
+                .thenReturn(Optional.empty());
+        assertThrows(RuntimeException.class,
+                () -> adminDashboardService
+                        .toggleMeteredComponentStatus(1L));
+    }
+    @Test
+    void testUpdateTaxRate() {
+        TaxRate updated = new TaxRate();
+        updated.setName("VAT");
+        updated.setRegion("US");
+        updated.setRatePercent(new BigDecimal("10"));
+        when(taxRateRepository.findById(1L))
+                .thenReturn(Optional.of(taxRate));
+        when(taxRateRepository.save(any()))
+                .thenReturn(taxRate);
+        TaxRate result =
+                adminDashboardService.updateTaxRate(1L, updated);
+        assertNotNull(result);
+    }
+    @Test
+    void testUpdateCoupon() {
+        Coupon updated = new Coupon();
+        updated.setName("Updated");
+        updated.setAmount(50L);
+        updated.setType(CouponType.FIXED);
+        when(couponRepository.findById(1L))
+                .thenReturn(Optional.of(coupon));
+        when(couponRepository.save(any()))
+                .thenReturn(coupon);
+        Coupon result =
+                adminDashboardService.updateCoupon(1L, updated);
+        assertNotNull(result);
+    }
+    @Test
+    void testToggleCouponStatus_NotFound() {
+        when(couponRepository.findById(1L))
+                .thenReturn(Optional.empty());
+        assertThrows(RuntimeException.class,
+                () -> adminDashboardService.toggleCouponStatus(1L));
+    }
+    @Test
+    void testUpdatePriceBookEntry() {
+        PriceBookEntry entry = new PriceBookEntry();
+        entry.setId(1L);
+        entry.setRegion("IN");
+        entry.setPlan(plan);
+        PriceBookEntry updated = new PriceBookEntry();
+        updated.setRegion("US");
+        when(priceBookEntryRepository.findById(1L))
+                .thenReturn(Optional.of(entry));
+        when(priceBookEntryRepository.save(any()))
+                .thenReturn(entry);
+        PriceBookResponse result =
+                adminDashboardService.updatePriceBookEntry(1L, updated);
+        assertNotNull(result);
+    }
+    @Test
+    void testCreateStaff_Conflict() {
+        User user = User.builder()
+                .email("admin@test.com")
+                .build();
+        when(userRepository.existsByEmail("admin@test.com"))
+                .thenReturn(true);
+        assertThrows(RuntimeException.class,
+                () -> adminDashboardService.createStaff(user));
+    }
+    @Test
+    void testDeleteStaff_CustomerForbidden() {
+        User customer = User.builder()
+                .id(1L)
+                .email("customer@test.com")
+                .role(UserRole.CUSTOMER)
+                .build();
+        when(userRepository.findById(1L))
+                .thenReturn(Optional.of(customer));
+        Authentication authentication =
+                mock(Authentication.class);
+        SecurityContext securityContext =
+                mock(SecurityContext.class);
+        when(authentication.getName())
+                .thenReturn("admin@test.com");
+        when(securityContext.getAuthentication())
+                .thenReturn(authentication);
+        SecurityContextHolder.setContext(securityContext);
+        assertThrows(RuntimeException.class,
+                () -> adminDashboardService.deleteStaff(1L));
+    }
+    @Test
+    void testUpdateAddOn_NotFound() {
+        when(addOnRepository.findById(1L))
+                .thenReturn(Optional.empty());
+        AddOn updated = new AddOn();
+        assertThrows(RuntimeException.class,
+                () -> adminDashboardService.updateAddOn(1L, updated));
+    }
+    @Test
+    void testUpdateMeteredComponent_NotFound() {
+        when(meteredComponentRepository.findById(1L))
+                .thenReturn(Optional.empty());
+        MeteredComponent updated = new MeteredComponent();
+        assertThrows(RuntimeException.class,
+                () -> adminDashboardService
+                        .updateMeteredComponent(1L, updated));
+    }
+    @Test
+    void testUpdateTaxRate_NotFound() {
+        when(taxRateRepository.findById(1L))
+                .thenReturn(Optional.empty());
+        TaxRate updated = new TaxRate();
+        assertThrows(RuntimeException.class,
+                () -> adminDashboardService
+                        .updateTaxRate(1L, updated));
+    }
+    @Test
+    void testUpdateCoupon_NotFound() {
+        when(couponRepository.findById(1L))
+                .thenReturn(Optional.empty());
+        Coupon updated = new Coupon();
+        assertThrows(RuntimeException.class,
+                () -> adminDashboardService
+                        .updateCoupon(1L, updated));
+    }
+    @Test
+    void testUpdatePriceBookEntry_NotFound() {
+        when(priceBookEntryRepository.findById(1L))
+                .thenReturn(Optional.empty());
+        PriceBookEntry updated = new PriceBookEntry();
+        assertThrows(RuntimeException.class,
+                () -> adminDashboardService
+                        .updatePriceBookEntry(1L, updated));
+    }
+    @Test
+    void testArchivePriceBookEntry_Conflict() {
+        PriceBookEntry entry = new PriceBookEntry();
+        entry.setPlan(plan);
+        when(priceBookEntryRepository.findById(1L))
+                .thenReturn(Optional.of(entry));
+        when(subscriptionRepository.countByPlan_IdAndStatusIn(
+                anyLong(), any()))
+                .thenReturn(5L);
+        assertThrows(RuntimeException.class,
+                () -> adminDashboardService
+                        .archivePriceBookEntry(1L));
+    }
+    @Test
+    void testArchivePriceBookEntry_NotFound() {
+        when(priceBookEntryRepository.findById(1L))
+                .thenReturn(Optional.empty());
+        assertThrows(RuntimeException.class,
+                () -> adminDashboardService
+                        .archivePriceBookEntry(1L));
     }
 }
